# Graliffer

./: Cargo.toml  LICENSE.md  README.md  STANDARD.md
crates/action/: Cargo.toml
crates/action/src/: lib.rs
crates/grai/: Cargo.toml
crates/grai/src/: actions.rs  frame.rs  granary.rs  grid.rs  head.rs  lang.rs  lib.rs  main.rs  stack.rs
crates/grai/src/grid/: cell.rs  direction.rs  position.rs
crates/grai/src/lang/: grid.rs  head.rs  operand.rs  stack.rs  word.rs
crates/grai/src/lang/grid/: cell.rs  direction.rs  position.rs
crates/grai/src/lang/syntax/: operand.rs
crates/grai/src/lang/word/: opcode.rs  operand.rs
crates/graliffer/: Cargo.toml
crates/graliffer/src/: app.rs  event.rs  frame.rs  input.rs  inputs.rs  lib.rs  main.rs  tui.rs  ui.rs
crates/graliffer/src/console/: mod.rs
crates/graliffer/src/editor/: stack_widget.rs  utils.rs
crates/graliffer/src/frame/: frame_action.rs
crates/graliffer/src/grid/: mod.rs
crates/graliffer/src/input/: context.rs  keystroke.rs
crates/graliffer/src/ui/: about.rs  console.rs  grid.rs  menu.rs  pane.rs  picker.rs  popup.rs
crates/graliffer_archive/: Cargo.toml
crates/graliffer_archive/src/: main.rs  utils.rs
crates/graliffer_archive/src/editor/: cursor.rs  grid_widget.rs  history_utils.rs
crates/graliffer_old/: Cargo.toml
crates/graliffer_old/src/: editor.rs  main.rs
src/: action.rs  app.rs  artifact.rs  console.rs  editor.rs  editorold.rs  frame.rs  grid.rs  history.rs  lang.rs  lib.rs  main.rs  platform.rs  run.rs  stack.rs  utils.rs
src/editor/: console_widget.rs  cursor.rs  editor_actions.rs  events.rs  grid_widget.rs  history_merge.rs  history_utils.rs  shortcut.rs  stack_widget.rs
src/frame/: console.rs  frame_action.rs  grid.rs  head.rs  stack.rs
src/frame/grid/: cell.rs  position.rs
src/grid/: cell.rs  head.rs  position.rs
src/lang/: opcode.rs  operand.rs
