[package]
name = "graliffer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
unicode-segmentation = "1.12"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.144"
eframe = "0.32.3"
egui = "0.32.3"
egui-phosphor = "0.10"
egui_tiles = "0.13.0"
rfd = "0.15.4"
smol = "2.0.2"
