[workspace.package]
description = " Graliffer is an exotic programming language using a 2d grid holding code and data"
repository = "https://github.com/Ora9/Graliffer"
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/graliffer",         # Graliffer tui
    "crates/grai",              # Graliffer interpreter
    "crates/graliffer_archive" # An archive of the first graliffer impl
]
default-members = ["crates/grai"]

[workspace.lints.rust]
unused = "allow"
# unsafe_code = "forbid"

[workspace.dependencies]
grai = { path = "crates/grai" }
graliffer = { path = "crates/graliffer" }

# External
unicode-segmentation = "1.12"
