[package]
name = "grai"
description.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
unicode-segmentation.workspace = true
thiserror = "2.0.18"
strum = "0.28"
strum_macros = "0.28"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
