[package]
name = "graliffer"
description.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
grai.workspace = true

color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.1"

tui-scrollbar = { version = "0.2.4", features = ["crossterm"] }

tui-logger = { version = "0.18.2", features = ["crossterm"] }
log = "0.4.32"

lipsum = "0.9"
rand = { version = "0.10.1", features = ["thread_rng"] }

strum = "0.28"
strum_macros = "0.28"

[lints]
workspace = true
