[package]
name = "graliffer"
description.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
unicode-segmentation.workspace = true
anyhow = "1.0"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.144"
eframe = "0.33.2"
egui = "0.33.2"
egui-phosphor = "0.11"
egui_tiles = "0.14.0"
rfd = "0.15.4"
smol = "2.0.2"

[lints]
workspace = true
